tests/valid/test_valid.c
int x;
float y;
x = 10;
y = 3.14;

if (x == 10)
{
    x = 20;
}
else
{
    y = 0.0;
}

while (x > 0)
{
    x = x - 1;
}

int z = 10;