tests/errors/multi_error_1.c
int x = 10;
int x = 20; // Redeclaration

y = 30; // Undeclared

if (x > 5)
{
    z = x + y; // Undeclared z
    x = 10 // Missing semicolon
}

float f = 2.5;
x = f; // Type mismatch
